<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        tools:context="MainActivity">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/question1Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/question_1"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/question_1_response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/question_1_response"
            android:inputType="number" />

        <TextView
            android:id="@+id/question2Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/question_2" />

        <CheckBox
            android:id="@+id/question_2_response_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:paddingLeft="16dp"
            android:text="@string/question_2_response_a" />

        <CheckBox
            android:id="@+id/question_2_response_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:paddingLeft="16dp"
            android:text="@string/question_2_response_b" />

        <CheckBox
            android:id="@+id/question_2_response_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:paddingLeft="16dp"
            android:text="@string/question_2_response_c" />

        <TextView
            android:id="@+id/question3Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/question_3" />

        <RadioGroup
            android:id="@+id/question_3_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <RadioButton
                android:id="@+id/question_3_yes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="16dp"
                android:text="@string/yes"></RadioButton>

            <RadioButton
                android:id="@+id/question_3_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="16dp"
                android:text="@string/no"></RadioButton>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/question_4" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <RadioButton
                android:id="@+id/question_4_sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="16dp"
                android:text="@string/sp"></RadioButton>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="16dp"
                android:text="@string/dp"></RadioButton>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="16dp"
                android:text="@string/fp"></RadioButton>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="16dp"
                android:text="@string/hp"></RadioButton>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/question_5" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="16dp"
                android:text="@string/sp"></RadioButton>

            <RadioButton
                android:id="@+id/question_5_dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="16dp"
                android:text="@string/dp"></RadioButton>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="16dp"
                android:text="@string/fp"></RadioButton>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="16dp"
                android:text="@string/hp"></RadioButton>

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/question_6" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <RadioButton
                android:id="@+id/question_6_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="16dp"
                android:text="@string/question_6_response_a"></RadioButton>

            <RadioButton
                android:id="@+id/question_6_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="16dp"
                android:text="@string/question_6_response_b"></RadioButton>

        </RadioGroup>

        <TextView
            android:id="@+id/question7Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/question_7" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/question_7_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="16dp"
                    android:text="TextView" />

                <CheckBox
                    android:id="@+id/question_7_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="16dp"
                    android:text="RadioGroup" />

                <CheckBox
                    android:id="@+id/question_7_c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="16dp"
                    android:text="CheckBox" />

                <CheckBox
                    android:id="@+id/question_7_d"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="16dp"
                    android:text="EditText" />


                <CheckBox
                    android:id="@+id/question_7_e"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="16dp"
                    android:text="LinearLayout" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/question_7_f"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="16dp"
                    android:text="RelativeLayout" />

                <CheckBox
                    android:id="@+id/question_7_g"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="16dp"
                    android:text="ScrollView" />

                <CheckBox
                    android:id="@+id/question_7_h"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="16dp"
                    android:text="RadioButton" />

                <CheckBox
                    android:id="@+id/question_7_i"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:paddingLeft="16dp"
                    android:text="ImageView" />

                <CheckBox
                    android:id="@+id/question_7_j"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="16dp"
                    android:text="Button" />

            </LinearLayout>
        </LinearLayout>


        <TextView
            android:id="@+id/question8Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/question_8" />

        <Switch
            android:id="@+id/question_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/submit_prompt" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="32dp">


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#009688"
                android:onClick="submitTestResults"
                android:text="@string/submit_button"
                android:textColor="@android:color/white" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:src="@drawable/gi" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#009688"
                android:onClick="resetViews"
                android:text="@string/reset"
                android:textColor="@android:color/white" />

        </LinearLayout>


    </LinearLayout>


</ScrollView>